--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 <h3>1. Inline element (like text or button..)</h3>
                 <div class="border-wrapper horizontal-inline-element-center">
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button>Submit</button>
                 </div>
             </div><!-- End horizontal-inline-element-->
 
